--- a/src/oraclient/view/FrontEndForm.form
+++ b/src/oraclient/view/FrontEndForm.form
@@ -232,7 +232,6 @@
             <MenuItem class="javax.swing.JMenuItem" name="getReportMenuItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#x41f;&#x43e;&#x43b;&#x443;&#x447;&#x438;&#x442;&#x44c; &#x43e;&#x442;&#x447;&#x435;&#x442;"/>
-                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="getReportMenuItemActionPerformed"/>
@@ -580,8 +579,13 @@
                   <SubComponents>
                     <Component class="javax.swing.JTextArea" name="console">
                       <Properties>
+                        <Property name="editable" type="boolean" value="false"/>
                         <Property name="columns" type="int" value="20"/>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Times New Roman" size="11" style="0"/>
+                        </Property>
                         <Property name="rows" type="int" value="5"/>
+                        <Property name="doubleBuffered" type="boolean" value="true"/>
                       </Properties>
                     </Component>
                   </SubComponents>
